_post.scss: changed

--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -66,7 +66,9 @@
 
 @media only screen and (min-width: 767px) {
     .post {
-        {}
+        {
+            
+        }
         &__image {
             img {
               max-width: 660px;
