--- a/_sass/imports/_post.scss
+++ b/_sass/imports/_post.scss
@@ -68,6 +68,8 @@
     .post {
         {
             
+    margin-left: 3rem;
+    margin-right: 3rem;
         }
         &__image {
             img {
