--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -187,5 +187,6 @@
 @media only screen and (max-width: 767px) {
     .section--portfolio .container--lg {
         margin: 0;
+        margin-bottom: 
     }
 }
