_portfolio-feed.scss: changed

--- a/_sass/imports/_portfolio-feed.scss
+++ b/_sass/imports/_portfolio-feed.scss
@@ -185,6 +185,9 @@
 }
 
 @media only screen and (max-width: 767px) {
+    .section--portfolio {
+        margin-bottom: 200px;
+    }
     .section--portfolio .container--lg {
         margin: 0;
     }
