--- a/_sass/imports/_section.scss
+++ b/_sass/imports/_section.scss
@@ -156,7 +156,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-    
+    .sect
     .section--header .container--lg, .section--form .container--lg {
         margin: 0;
     }
