project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,6 +22,10 @@ layout: body
         {{ content }}
       {% endfor %}
   </div>
+  <div class="text-block container container--md">
+  
+
+</div>
 </article>
 
 {% assign projects_sorted = '/portfolio' | get_pages | sort: 'date' | reverse %}
