--- a/_includes/text_section.html
+++ b/_includes/text_section.html
@@ -1,4 +1,4 @@
 {% assign section = include.section %}
 <div class="text-block container container--md">
-  {{ section.content  }}
+  {{ section.content markdownify }}
 </div>
