project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,7 +19,9 @@ layout: body
         
         {% assign component = section.type | append: ".html" %}
         {% include {{ component }} section=section site=site %}
-
+  <div class="text-block container container--md">
+        {{ page.content }}
+</div>
       {% endfor %}
   </div>
 
