project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -23,7 +23,7 @@ layout: body
       {% endfor %}
   </div>
   <div class="text-block container container--md">
-        {{ page.content }}
+        {{ content }}
 </div>
 </article>
 
