project.html: changed

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,6 +19,7 @@ layout: body
         
         {% assign component = section.type | append: ".html" %}
         {% include {{ component }} section=section site=site %}
+        {{ content }}
       {% endfor %}
   </div>
   <div class="text-block container container--md">
