--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,9 +18,7 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
-<svg xmlns="http://www.w3.org/2000/svg"
-     width="36px" height="36px"
-     viewBox="0 0 36 36">
+class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
   <path id="Lotos"
         fill="none" stroke="black" stroke-width="1"
         d="M 208.75,262.00
