icon.html: changed

--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,7 +18,7 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
-class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
+<svg class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
 <path id="Lotos"
         fill="none" stroke="black" stroke-width="1"
         d="M 208.75,262.00
