--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -19,8 +19,7 @@
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
 <svg class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
-<path id="Lotos"
-        fill="none" stroke="black" stroke-width="1"
+<path id="Lotos" fill="none" stroke="black" stroke-width="1"
         d="M 208.75,262.00
            C 191.32,262.80 170.05,253.01 165.00,249.50
              159.50,244.00 159.00,240.50 156.00,231.75
