--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,26 +18,66 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
-    <svg class="icon" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
-        <path id="Lotos" fill="none" stroke="black" stroke-width="1"
-            d="M 208.75,262.00
-            C 191.32,262.80 170.05,253.01 165.00,249.50
-                159.50,244.00 159.00,240.50 156.00,231.75
-                154.35,232.07 157.00,192.75 159.50,178.50
-                163.04,164.51 191.29,103.16 211.25,77.50
-                251.45,145.96 260.50,178.00 260.50,178.00
-                267.00,198.50 266.00,229.00 265.50,227.00
-                265.50,227.00 245.50,251.50 245.50,251.50
-                247.17,252.17 230.25,258.75 208.75,262.00 Z
-            M 145.50,274.00
-            C 145.50,274.00 119.50,278.50 94.00,275.50
-                93.93,277.11 54.00,267.50 34.00,250.00
-                57.57,239.48 85.56,235.21 104.75,233.50
-                119.25,232.50 159.62,232.00 154.88,232.25
-                158.62,243.75 164.84,252.35 164.62,251.12
-                166.51,251.77 148.10,274.14 145.50,274.00 Z
-            M 103.50,230.00
-            C 92.50,224.00 66.50,198.00 54.50,177.50
+<svg xmlns="http://www.w3.org/2000/svg"
+     width="12.6984mm" height="12.6984mm"
+     viewBox="0 0 36 36">
+  <path id="Lotos"
+        fill="none" stroke="black" stroke-width="1"
+        d="M 18.79,23.58
+           C 17.22,23.65 15.30,22.77 14.85,22.45
+             14.35,21.96 14.31,21.64 14.04,20.86
+             13.89,20.89 14.13,17.35 14.35,16.06
+             14.67,14.81 17.22,9.28 19.01,6.97
+             22.63,13.14 23.45,16.02 23.45,16.02
+             24.03,17.86 23.94,20.61 23.89,20.43
+             23.89,20.43 22.09,22.63 22.09,22.63
+             22.24,22.70 20.72,23.29 18.79,23.58 Z
+           M 13.09,24.66
+           C 13.09,24.66 10.75,25.06 8.46,24.79
+             8.45,24.94 4.86,24.07 3.06,22.50
+             5.18,21.55 7.70,21.17 9.43,21.02
+             10.73,20.93 14.37,20.88 13.94,20.90
+             14.28,21.94 14.84,22.71 14.82,22.60
+             14.99,22.66 13.33,24.67 13.09,24.66 Z
+           M 9.31,20.70
+           C 8.32,20.16 5.98,17.82 4.91,15.97
+             4.46,12.87 4.61,11.44 5.22,8.69
+             7.79,9.49 8.73,10.57 9.72,11.47
+             9.98,11.56 13.57,15.79 14.06,16.45
+             14.11,18.86 13.97,18.56 13.88,20.72
+             13.95,20.88 12.64,20.88 9.31,20.70 Z
+           M 10.15,11.59
+           C 10.42,9.65 10.80,8.64 11.65,7.74
+             13.23,8.17 13.93,8.21 15.88,11.61
+             15.41,13.41 14.38,15.91 14.02,15.97
+             13.99,16.20 11.50,13.30 10.15,11.59 Z
+           M 21.91,11.92
+           C 23.20,10.06 24.23,8.89 25.96,7.96
+             26.53,9.45 26.89,12.46 26.62,12.46
+             25.31,14.35 24.25,15.37 23.62,16.06
+             23.62,16.06 21.91,11.92 21.91,11.92 Z
+           M 26.89,12.44
+           C 27.45,11.88 30.06,9.74 31.93,9.13
+             32.49,10.51 32.94,12.67 32.33,16.88
+             32.04,17.39 31.48,18.70 28.64,20.25
+             27.29,20.72 26.73,20.72 24.03,20.50
+             24.12,19.21 23.80,16.38 23.69,16.31
+             23.69,16.31 26.89,12.44 26.89,12.44 Z
+           M 22.32,22.50
+           C 22.50,23.58 23.81,25.19 23.89,25.02
+             23.89,25.02 25.15,25.79 25.20,25.79
+             28.71,26.14 34.59,24.44 34.42,24.30
+             34.88,24.09 30.42,21.55 27.99,20.97
+             27.99,20.97 23.85,20.61 23.85,20.61
+             23.85,20.61 22.32,22.50 22.32,22.50 Z
+           M 23.70,25.10
+           C 22.69,27.15 18.91,29.82 18.77,29.63
+             16.27,28.44 15.38,27.84 13.22,24.65
+             13.28,24.80 14.70,23.11 14.97,22.60
+             16.40,23.43 18.60,23.77 18.60,23.77
+             19.55,23.68 21.45,23.09 22.20,22.76
+             22.32,23.23 23.70,25.12 23.70,25.10 Z" />
+</svg>
 
   {% endif %}
 
