icon.html: changed

--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -18,7 +18,7 @@
   </svg>
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
-<svg class=xmlns="http://www.w3.org/2000/svg"
+<svg class="icon" xmlns="http://www.w3.org/2000/svg"
      width="12.6984mm" height="12.6984mm"
      viewBox="0 0 36 36">
   <path id="Lotos"
