main.scss: changed

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ $fonts: (
   ),
   karla: (
     "Karla",
-    sans-serif,
+    sans-serif,reintroduce starting dashes in main.scss
   ),
   system-sans: (
     -apple-system,
