--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -45,6 +45,7 @@
 @media only screen and (max-width: 948px) {
   .project {
     figure img {
+        width: 100%;
       max-width: calc(100% + 6vw);
     }
   }
