--- a/_sass/imports/_project.scss
+++ b/_sass/imports/_project.scss
@@ -44,6 +44,9 @@
 
 @media only screen and (max-width: 948px) {
   .project {
+    figure {
+        margin-right: 1.5rem;
+    }
     figure img {
       max-width: calc(100% + 6vw);
     }
