--- a/_includes/icon.html
+++ b/_includes/icon.html
@@ -19,7 +19,7 @@
   {% assign lotos = include.icon %}
   {% if icon == 'lotos' %}
 <svg xmlns="http://www.w3.org/2000/svg"
-     width="12.6984mm" height="12.6984mm" class="left-align"
+     width="12.6984mm" height="12.6984mm" class="icon-left"
      viewBox="0 0 36 36">
   <path id="Lotos"
         fill="none" stroke="black" stroke-width="1"
