--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -104,6 +104,7 @@
 @media only screen and (min-width: 768px) {
   .navbar {
     padding-left: 1.5rem;
+    margin-top: 3rem;
 
     &__toggle {
       display: none;
